--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -738,6 +738,7 @@ a.wthree-more:hover > span:nth-child(10) {
     font-size: 1em;
     color: #999;
     margin-top: 1em;
+    min-width: 200px;
 }
 .skills-w3lsleft ul li i.fa{
     font-size: 1.2em;
