--- a/app/views/portfolios/_about.html.erb
+++ b/app/views/portfolios/_about.html.erb
@@ -14,23 +14,23 @@
 		<div class="col-md-4 about-left-agileits">
 			<div class="services-grids social">
 				<a class="fa fa-delicious" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Get extensive web solutions.</p>
+				<p class="para-agileits-w3layouts">Get extensive web solutions.<br>Fast and Responsive sites with proper SEO</p>
 				<div class="clearfix"></div>
 				<h6>Web Development</h6>
 			</div>
 			<div class="services-grids">
 				<a class="fa fa-mobile" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Get fast and responsive sites.</p>
-				<h6>Web Responsiveness</h6>
-			</div>
-			<div class="services-grids">
-				<a class="fa fa-globe" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP by keeping the perspective of stability, consistency, flexibility, adobtability and security.</p>
+				<p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP protocols by keeping the perspective of stability, consistency, flexibility, adobtability and security...</p>
 				<h6>API Development</h6>
 			</div>
 			<div class="services-grids">
+				<a class="fa fa-globe" aria-hidden="true"></a>
+				<p class="para-agileits-w3layouts">Payment(Strip, Payfort), Maps, Email-Service (Sendgrid), Twillio, Firebase(Firechat, Push Notifications)...</p>
+				<h6>Third Party Services</h6>
+			</div>
+			<div class="services-grids">
 				<a class="fa fa-desktop" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Integration of Third parties like Google Map, Mobile Push Notifications, Amazon, S3 Storage, Email and many more</p>
+				<p class="para-agileits-w3layouts">Heroku, AWS (Amazon Web Services): Elastic Beanstalk, EC2, EB CLI, Scheduled Volumn Backup, RDS with autobackup, S3-Storage, S3-Backup, Glacier, CloudWatch, CloudFront, Elastic Load Balancer, Auto Scaling, Security...</p>
 				<h6>Web Services</h6>
 			</div>
 			<div class="clearfix"></div>
@@ -40,11 +40,11 @@
 			<div class="about-border-w3ls">
 			</div>
 			<div class="person-info-agileits-w3layouts">
-				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I am technology enthusiast.<br>I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon EC2, EB CLI, Git, GitHub, Jquery, creating APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap, Responsive Designs, Twilio etc</p><br>
-				<p>I am involved in most parts of the software life cycle i.e architecture designing, schema designing, and coding.</p>
+				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I am a technology enthusiast.<br>I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon Web Services, Git, GitHub, Jquery, creating APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap, Responsive Designs, Twilio etc</p><br>
+				<p>I am involved in most parts of the software life cycle i.e architecture designing, schema designing, and implementation.</p>
 				<ul>
 					<li><span>Name</span>: Touqeer Ahmad</li>
-					<li><span>Age</span>: 24 Years</li>
+					<li><span>Age</span>: 25 Years</li>
 					<li><span>Experience</span>: +2 Years</li>
 					<li><span>Email</span>: <a href="mailto:tqr093@gmail.com">tqr093@gmail.com</a></li>
 					<li><span>Address</span>: Lahore, Pakistan</li>
