--- a/app/views/portfolios/_cover.html.erb
+++ b/app/views/portfolios/_cover.html.erb
@@ -23,4 +23,4 @@
 		</div>
 	</div>
 </div>
- <%= image_tag "profile.jpg", alt: "touqeer ahmad, tqr, profile-pic", class:"profile-pic" %> 
+ <%= image_tag "profile-2.jpg", alt: "touqeer ahmad, tqr, profile-pic", class:"profile-pic" %> 
