--- a/app/views/portfolios/_experience.html.erb
+++ b/app/views/portfolios/_experience.html.erb
@@ -13,11 +13,21 @@
 			<div class="scrollbar agileits w3layouts" id="style-1">
 				<div class="activity-row agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
-						<h6>2016-2017</h6>
+						<h6>Present<br>.<br>.<br>.<br>Jun 2018</h6>
+					</div>
+					<div class="activity-desc agileits w3layouts">
+						<h5>Aldaim Solutions</h5>
+						<p class="para-agileits-w3layouts">Being a Part of Major Development Lifcyle, Technical Team Lead in multiple projects, Training & Giving Guidance to Juniors, Handled tough situations...</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="activity-row agileits w3layouts">
+					<div class="activity-img agileits w3layouts">
+						<h6>Jan 2018<br>.<br>.<br>.<br>Dec 2016</h6>
 					</div>
 					<div class="activity-desc agileits w3layouts">
 						<h5>Novatore Solutions</h5>
-						<p class="para-agileits-w3layouts">Collaboration with designer to create clean, simple and intuitive interface, mobile team to create APIs and seniors with improve knowledge. Experience with Agile methodology (Daily Sprint Meetings) and Version Control System with GIT.</p>
+						<p class="para-agileits-w3layouts">Collaboration with <strong>Designer</strong> to create clean, simple and intuitive interface, <strong>Mobile Team</strong> to create APIs under the guidance of Experienced Mentors. Experience with Agile methodology (Daily Sprint Meetings) and Version Control System with GIT.</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
