--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -198,7 +198,7 @@ header {
 	left: 0;
     right: 0;
     margin: 0 auto;
-    bottom: 1%;
+    bottom: 3%;
 }
 .banner-text-w3-agileits p {
 	font-size: 1em;
@@ -403,7 +403,7 @@ nav.shift ul li a:hover:after {
 /*-- //header --*/
 
 .banner {
-	background: url('<%= asset_path("banner.jpg")%>')no-repeat 0px 0px;
+	background: url('<%= asset_path("banner.jpg")%>')no-repeat 0px -40px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -541,10 +541,10 @@ h5.title-w3 span {
 }
 
 .para-agileits-w3layouts {
-	font-size: 15px;
+	font-size: 14px;
 	color: #777;
-	letter-spacing: .8px;
-	line-height: 30px;
+	letter-spacing: .5px;
+	line-height: 29px;
 }
 
 .red-w3ls {
@@ -621,7 +621,7 @@ h3.subheading-agileits-w3layouts {
 
 .services-grids p {
 	color: rgba(33, 33, 33, 0.8);
-	margin: 1em;
+	margin: 0.6em;
 }
 
 .services-grids h6 {
@@ -652,7 +652,7 @@ h3.subheading-agileits-w3layouts {
 	-webkit-background-clip: text !important;
 	-webkit-text-fill-color: transparent;
 	font-size: 2em;
-	margin: 0.8em 0 0;
+	margin-top: 15px;
 }
 
 .services-grids:hover {
@@ -666,7 +666,7 @@ h3.subheading-agileits-w3layouts {
 .services-grids:nth-child(1),
 .services-grids:nth-child(2),
 .services-grids:nth-child(3) {
-	margin-bottom: 1.5em;
+	margin-bottom: 0.7em;
 }
 
 
@@ -971,6 +971,7 @@ h3.subheading-agileits-w3layouts {
 	letter-spacing: 1px;
 	text-align: left;
 	padding: 15px 0 0 9px;
+  font-variant: small-caps;
 }
 
 .activity-desc p {
