--- a/app/views/portfolios/_education.html.erb
+++ b/app/views/portfolios/_education.html.erb
@@ -11,17 +11,17 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="scrollbar agileits w3layouts" id="style-2">
-				<div class="activity-row agileits w3layouts">
+				<div class="agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
 						<h6>2012-2016</h6>
 					</div>
 					<div class="activity-desc agileits w3layouts">
 						<h5>University of Central Punjab</h5>
-						<p class="para-agileits-w3layouts">Graduated in BSCS and have done various projects including different technologies and frameworks like Web Development, Windows Phone SDK 8.0, Compiler Construction, Image Recognition Open-CV, Arduino-UNO, STM32F102RB.</p>
+						<p class="para-agileits-w3layouts">Graduated in BSCS and have done various projects in different technologies & frameworks like Windows Phone SDK 8.0, Compiler Construction, Image Recognition Open-CV, Arduino-UNO, STM32F102RB...</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
-				<div class="activity-row agileits w3layouts">
+				<div class="agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
 						<h6>2010-2012</h6>
 					</div>
