--- a/app/views/portfolios/_skills.html.erb
+++ b/app/views/portfolios/_skills.html.erb
@@ -7,94 +7,110 @@
 	<div class="container">
 		<div class="skill-agileinfo">
 			<div class="skill-grids">
-				<div class="col-md-4 col-sm-4 skills-w3lsleft">
+				<div class="col-sm-6 skills-w3lsleft">
 					<h3>Experience With Gems</h3>
-					<div class="col-xs-6" >
+					<div class="col-xs-4" >
 						<ul>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Devise</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Tiddle</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Slim</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Sendgrid-rails</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Byebug</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Web-console</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Turbolinks</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Jbuilder</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Twilio-Ruby</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Kaminari</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Will_paginate</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Geocoder</li>
+							<% @gems_list[0..12].each do |g| %>
+								<li><i class="fa fa-check-square-o" aria-hidden="true"></i><%= g %></li>
+							<% end %>
 						</ul>
 					</div>
-					<div class="col-xs-6" >
+					<div class="col-xs-4" >
 						<ul>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Geokit</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Gmaps4rails</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Paperclip</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Carrierwave</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>FCM</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Spawnling</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Delayed_job_</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>_active_record</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Ckeditor</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Rails-erd</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Nokogiri</li>
-							<li><i class="fa fa-check-square-o" aria-hidden="true"></i>redis</li>
+							<% @gems_list[12..24].each do |g| %>
+								<li><i class="fa fa-check-square-o" aria-hidden="true"></i><%= g %></li>
+							<% end %>
+						</ul>
+					</div>
+					<div class="col-xs-4" >
+						<ul>
+							<% @gems_list[24..36].each do |g| %>
+								<li><i class="fa fa-check-square-o" aria-hidden="true"></i><%= g %></li>
+							<% end %>
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-8 col-sm-8 skills-w3lsright">
+				<div class="col-sm-6 skills-w3lsright">
 					<h3>Technical Skills</h3>
-					<div class="skillbar" data-percent="94">
-						<span class="skillbar-title" style="background:#A90000;">Ruby</span>
+					<div class="skillbar" data-percent="98">
+						<span class="skillbar-title" style="background:#a70000;">Ruby on Rails</span>
 						<p class="skillbar-bar" style="background: #D40000;"></p>
 						<span class="skill-bar-percent"></span>
 					</div>
 					<!-- End Skill Bar --> 
 					<div class="skillbar" data-percent="96">
-						<span class="skillbar-title" style="background:#6f0300;">Ruby on Rails</span>
-						<p class="skillbar-bar" style="background: #a70000;"></p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar -->   
-					<div class="skillbar" data-percent="94">
-						<span class="skillbar-title" style="background:#565656;">Active Record</span>
-						<p class="skillbar-bar" style="background: #949494;"></p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar -->   
-					<div class="skillbar" data-percent="96">
-						<span class="skillbar-title" style="background:#067D99;">API Json</span>
-						<p class="skillbar-bar" style="background: #3e94a9;"></p>
+						<span class="skillbar-title" style="background:#067D99;">API</span>
+						<p class="skillbar-bar rw-words rw-words-2" style="background: #3e94a9;">
+								<span>Authentication & Authorization</span>
+								<span>PostMan & Apiary Documentation</span>
+								<span>Versioning</span>
+								<span>Bulk Operations & Response Time</span>
+								<span>Exceptional Handling with proper Status Codes</span>
+								<span>Response Type (json, xml, txt)</span>
+						</p>
 						<span class="skill-bar-percent"></span>
 					</div>
 					<!-- End Skill Bar -->   
 					<div class="skillbar" data-percent="98">
-						<span class="skillbar-title" style="background:#E93E00;">HTML5/Slim/HAML</span>
-						<p class="skillbar-bar" style="background: #F55E00;"></p>
+						<span class="skillbar-title" style="background:#E93E00;">AWS</span>
+						<p class="skillbar-bar rw-words rw-words-2" style="background: #F55E00;">
+							<span>Elastic Beanstalk (EB-CLI)</span>
+							<span>EC2, Security, Volumn Backup, Snapshot</span>
+							<span>S3, Glacier, S3-Backup, Versioning</span>
+							<span>RDS, Auto-Backup</span>
+							<span>CloudWatch (Policy Defining)</span>
+							<span>CloudFront</span>
+							<span>Auto-Scaling & Auto-Load-Balancing</span>
+						</p>
 						<span class="skill-bar-percent"></span>
 					</div>
 					<!-- End Skill Bar --> 
 					<div class="skillbar" data-percent="99">
-						<span class="skillbar-title" style="background:#2D50BC;">CSS3/SASS</span>
-						<p class="skillbar-bar" style="background:#3499E3;"></p>
+						<span class="skillbar-title" style="background:#2D50BC;">Web</span>
+						<p class="skillbar-bar rw-words rw-words-2" style="background:#3499E3;">
+							<span>HTML5 / Slim / HAML</span>
+							<span>CSS3 / SASS / SCSS</span>
+							<span>Media Queries, Responsiveness</span>
+							<span>SEO, Sitemap</span>
+							<span>Fast Loading/Rendering</span>
+							<span>i18n</span>
+							<span>Partial Refresh</span>
+						</p>
 						<span class="skill-bar-percent"></span>
 					</div>
 					<!-- End Skill Bar --> 
+					<div class="skillbar" data-percent="94">
+						<span class="skillbar-title" style="background:#565656;">Javascript/jQuery</span>
+						<p class="skillbar-bar" style="background:#949494;"></p>
+						<span class="skill-bar-percent"></span>
+					</div>
+					<!-- End Skill Bar -->
 					<div class="skillbar" data-percent="92">
-						<span class="skillbar-title" style="background:#807d7d;">jQuery</span>
-						<p class="skillbar-bar" style="background:#A8A7A8;"></p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar -->
-					<div class="skillbar" data-percent="90">
 						<span class="skillbar-title" style="background:#5D3F28;">Database</span>
-						<p class="skillbar-bar" style="background:#9a6c48;text-align: center;"><span style="width: 88%;color: whitesmoke;text-align: center;font-weight: bold;font-size: 11px;">MySQL / Postgres / MongoDB</span></p>
+						<p class="skillbar-bar rw-words rw-words-2" style="background:#9a6c48;">
+							<span>MySQL</span>
+							<span>Postgres</span>
+							<span>Mongoid</span>
+							<span>ActiveRecord</span>
+							<span>Joins</span>
+							<span>Grouping</span>
+							<span>Query Optimization</span>
+						</p>
 						<span class="skill-bar-percent"></span>
 					</div>
 					<!-- End Skill Bar -->
-					<div class="skillbar" data-percent="98">
+					<div class="skillbar" data-percent="99">
 						<span class="skillbar-title" style="background:#ff5858;">Git</span>
-						<p class="skillbar-bar" style="background:#ff8080;"></p>
+						<p class="skillbar-bar rw-words rw-words-2" style="background:#ff8080;">
+							<span>Multiple Enviroment (Prod, Develop, Staging)</span>
+							<span>Multi-Remote</span>
+							<span>Rebase</span>
+							<span>Cherry-Pick</span>
+							<span>Squash</span>
+							<span>Commit Manipulation</span>
+							<span>Conflicts Handling</span>
+						</p>
 						<span class="skill-bar-percent"></span>
 					</div>
 					<!-- End Skill Bar --> 
