--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -1342,6 +1342,9 @@ h2.agileits-title {
 } 
 }
 @media(max-width:600px){
+.skills-w3lsleft ul li{
+  min-width: initial;
+}
 .banner-text h2 {
     font-size: 4.5em;
 } 
