--- a/app/views/portfolios/_cover.html.erb
+++ b/app/views/portfolios/_cover.html.erb
@@ -1,14 +1,17 @@
 <div class="tech-logos row">
-	<div class="col-md-2 col-xs-3">
+	<div class="col-md-2 col-xs-2">
 		<%= image_tag "ruby-logo.png" %>
 	</div>
-	<div class="col-md-2 col-xs-3 col-md-offset-1 text-center">
+	<div class="col-md-2 col-xs-2 col-md-offset-1 text-center">
 		<%= image_tag "rails-logo.png" %>
 	</div>
-	<div class="col-md-2 col-xs-3 col-md-offset-3 text-right">
+	<div class="col-md-2 col-xs-3 text-center">
+		<%= image_tag "aws-logo.png" %>
+	</div>
+	<div class="col-md-2 col-xs-2 text-right">
 		<%= image_tag "ruby-mine-logo.png" %>
 	</div>
-	<div class="col-md-2 col-xs-3 text-right">
+	<div class="col-md-2 col-xs-2 text-right">
 		<%= image_tag "ubuntu-logo.png" %>
 	</div>
 </div>
