--- a/app/views/portfolios/_contact.html.erb
+++ b/app/views/portfolios/_contact.html.erb
@@ -7,7 +7,7 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="address-w3layouts">
-				<p class="para-agileits-w3layouts">Always open to new things</p>
+				<p class="para-agileits-w3layouts">Always open to new Ideas, Challenges...</p>
 				<h4><a href="mailto:info@example.com">tqr093@gmail.com</a></h4>
 				<hr style="height: 3px;border:none;width: 185px;background: -webkit-linear-gradient(red, orange);">
 				<h6>+92 343 4535019</h6>
