--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <!-- Meta Tags -->
+  <meta property="og:image" content="<%= asset_path('profile-2.jpg') %>">
+  <meta property="og:url" content="https://touqeer-ahmad.herokuapp.com/">
+  <meta property="og:url" content="https://www.linkedin.com/in/touqeer-ahmad/">
+  <meta property="og:title" content="Touqeer Ahmad">
+  <meta property="og:description" content="Touqeer Ahmad Ruby on Rails Developer, DevOps, AWS, Full Stack">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="toueer ahmad, tqr, tqr093, university of central punjab, ror developer, software engineer, ruby on rails, ruby on rails developer, aws service expert, aws expert, web developer, web deployment, amazon web services, website maker, api developer, responsive site maker, mvc, modal view controller" />
