--- a/app/views/portfolios/_cover.html.erb
+++ b/app/views/portfolios/_cover.html.erb
@@ -2,11 +2,14 @@
 	<div class="col-md-2 col-xs-2">
 		<%= image_tag "ruby-logo.png" %>
 	</div>
-	<div class="col-md-2 col-xs-2 col-md-offset-1 text-center">
+	<div class="col-md-2 col-xs-2 text-right">
 		<%= image_tag "rails-logo.png" %>
 	</div>
 	<div class="col-md-2 col-xs-3 text-center">
 		<%= image_tag "aws-logo.png" %>
+	</div>
+	<div class="col-md-2 col-xs-3 text-right">
+		<%= image_tag "docker.svg" %>
 	</div>
 	<div class="col-md-2 col-xs-2 text-right">
 		<%= image_tag "ruby-mine-logo.png" %>
@@ -20,10 +23,10 @@
 	<div style="float: right">
 		<span>Hi, I'm</span>
 		<h1><span>T</span>ouqeer <span>A</span>hmad</h1>
-		<p><span>Full Stack ROR Developer</span></p>
+		<p><span>Software Engineer (ROR, AWS, DevOps)</span></p>
 		<div class="botton">
 			<a href="#about" class="scroll">About me <span class="fa fa-caret-right"></span></a>
 		</div>
 	</div>
 </div>
- <%= image_tag "profile-2.jpg", alt: "touqeer ahmad, tqr, profile-pic", class:"profile-pic" %> 
+ <%= image_tag "profile-2.jpg", alt: "touqeer ahmad, tqr, profile-pic", itemprop: "image", og: "image", class: "profile-pic" %> 
