--- a/app/views/portfolios/_experience.html.erb
+++ b/app/views/portfolios/_experience.html.erb
@@ -13,10 +13,20 @@
 			<div class="scrollbar agileits w3layouts" id="style-1">
 				<div class="activity-row agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
-						<h6>Present<br>.<br>.<br>.<br>Jun 2018</h6>
+						<h6>Present<br>.<br>.<br>.<br>Jun 2019</h6>
 					</div>
 					<div class="activity-desc agileits w3layouts">
-						<h5>Aldaim Solutions</h5>
+						<h5>Finology Sdn Bhd.</h5>
+						<p class="para-agileits-w3layouts">Working A Malaysian Fintech company driving change in the banking, property, and insurance industries worldwide.<br>Ruby on Rails | AWS | Full Stack | DevOps</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="activity-row agileits w3layouts">
+					<div class="activity-img agileits w3layouts">
+						<h6>Jun 2019<br>.<br>.<br>.<br>May 2018</h6>
+					</div>
+					<div class="activity-desc agileits w3layouts">
+						<h5>ADS - Aldaim Solutions</h5>
 						<p class="para-agileits-w3layouts">Being a Part of Major Development Lifcyle, Technical Team Lead in multiple projects, Training & Giving Guidance to Juniors, Handled tough situations...</p>
 					</div>
 					<div class="clearfix"></div>
