--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -138,9 +138,10 @@ header {
 }
 .ror-pic{
 	height: 250px;
+	width: 300px;
 	position: absolute;
 	top: 13.5em;
-	padding-left: 1.7em;
+	margin-left: 2.3em;
 }
 .banner-text-w3-agileits {
 	margin-top: 5.5em;
@@ -163,21 +164,23 @@ header {
 	font-size: 1.7em;
 }
 .banner-text-w3-agileits h1 {
-	font-size: 3em;
-	letter-spacing: 8px;
+	font-size: 3.5em;
+	letter-spacing: 5px;
 	font-weight: 500;
 	color: #fff;
 	position: relative;
-	margin: 0.2em 0 0.6em;
+	margin: 0.2em 0 0.4em;
+	font-variant: small-caps;
+	line-height: 0.8;
 }
 
 .banner-text-w3-agileits h1:after {
 	position: absolute;
 	content: "";
-	width: 150px;
+	width: 230px;
 	height: 2px;
 	bottom: -8px;
-	right: 1px;
+	left: 1px;
 	background: -webkit-linear-gradient(red, orange);
 }
 
@@ -206,6 +209,8 @@ header {
 	font-weight: 400;
 	background: rgba(0, 0, 0, 0.32);
 	padding: 4px 14px;
+	border-bottom-left-radius: 20PX;
+	border-top-right-radius: 20px;
 }
 
 .banner-text-w3-agileits p span{
@@ -230,11 +235,11 @@ header {
 	-moz-transform: rotate(90deg);
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
-	transition: 0.5s ease-in;
-	-webkit-transition: 0.5s ease-in;
-	-moz-transition: 0.5s ease-in;
-	-ms-transition: 0.5s ease-in;
-	-o-transition: 0.5s ease-in;
+	transition: 0.2s ease-in;
+	-webkit-transition: 0.2s ease-in;
+	-moz-transition: 0.2s ease-in;
+	-ms-transition: 0.2s ease-in;
+	-o-transition: 0.2s ease-in;
 	background: -webkit-linear-gradient(red, orange);
 	-webkit-background-clip: text !important;
 	-webkit-text-fill-color: transparent;
@@ -264,11 +269,11 @@ header {
 	vertical-align: middle;
 	text-align: center;
 	line-height: 32px;
-	transition: 0.5s ease-in;
-	-webkit-transition: 0.5s ease-in;
-	-moz-transition: 0.5s ease-in;
-	-ms-transition: 0.5s ease-in;
-	-o-transition: 0.5s ease-in;
+	transition: 0.2s ease-in;
+	-webkit-transition: 0.2s ease-in;
+	-moz-transition: 0.2s ease-in;
+	-ms-transition: 0.2s ease-in;
+	-o-transition: 0.2s ease-in;
 }
 
 
@@ -684,15 +689,20 @@ h3.subheading-agileits-w3layouts {
 	position: absolute;
 	padding: 26.75em 21em;
 	border: 24px solid #000;
+	border-top-right-radius: 100px;
+	border-bottom-left-radius: 100px;
 }
 
 .person-info-agileits-w3layouts {
-	padding: 3em;
+	padding: 3em 4em;
 	background: var(--main-secondary-color-main);
 	position: absolute;
 	left: 3em;
 	top: 3em;
 	box-shadow: -3px 7px 15px rgba(21, 21, 21, 0.38);
+	border-top-right-radius: 50px;
+	border-bottom-left-radius: 50px;
+	width: 82%;
 }
 
 .person-info-agileits-w3layouts ul {
@@ -1186,11 +1196,11 @@ h3.subheading-agileits-w3layouts {
 	-webkit-appearance: none;
 	background: var(--main-secondary-color-main);
 	border: none;
-	transition: 0.5s ease-in;
-	-webkit-transition: 0.5s ease-in;
-	-moz-transition: 0.5s ease-in;
-	-ms-transition: 0.5s ease-in;
-	-o-transition: 0.5s ease-in;
+	transition: 0.2s ease-in;
+	-webkit-transition: 0.2s ease-in;
+	-moz-transition: 0.2s ease-in;
+	-ms-transition: 0.2s ease-in;
+	-o-transition: 0.2s ease-in;
 }
 
 .contact-form input[type="submit"]:hover {
@@ -1246,7 +1256,7 @@ h3.subheading-agileits-w3layouts {
 /*-- footer --*/
 
 .map-w3-agileits iframe {
-	width: 100%;
+	/*width: 100%;*/
 	height: 394px;
 	border: none;
 }
@@ -1268,11 +1278,23 @@ h3.subheading-agileits-w3layouts {
 .w3l-social ul li a {
 	text-align: center;
 }
-
+.fa-rubygems{
+	height: 40px;
+}
+.fa-rubygems::after{
+	background-image: url('<%= asset_path("rubygems.png") %>');
+  background-size: 40px auto;
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px; 
+  height: 40px;
+  content:"";
+}
 .w3l-social ul li a.fa.fa-github,
 .w3l-social ul li a.fa.fa-facebook,
 .w3l-social ul li a.fa.fa-linkedin,
 .w3l-social ul li a.fa.fa-twitter,
+.w3l-social ul li a.fa.fa-rubygems,
 .w3l-social ul li a.fa.fa-google-plus {
 	font-size: 40px;
 	width: 35px;
@@ -1322,6 +1344,10 @@ h3.subheading-agileits-w3layouts {
 
 .w3l-social ul li a.fa.fa-linkedin:hover{
 	color: #1B93D5;
+}
+
+.w3l-social ul li a.fa.fa-rubygems:hover{
+	filter: saturate(2);
 }
 
 .w3l-social ul li a:hover,
@@ -1414,7 +1440,7 @@ h3.subheading-agileits-w3layouts {
 		margin-top: 1.2em;
 	}
 	.ror-pic{
-		top: 11.5em;
+		top: 13.5em;
 	}
 }
 
