--- a/app/views/portfolios/_contact.html.erb
+++ b/app/views/portfolios/_contact.html.erb
@@ -10,8 +10,12 @@
 				<p class="para-agileits-w3layouts">Always open to new Ideas, Challenges...</p>
 				<h4><a href="mailto:info@example.com">tqr093@gmail.com</a></h4>
 				<hr style="height: 3px;border:none;width: 185px;background: -webkit-linear-gradient(red, orange);">
-				<h6>+92 343 4535019</h6>
-				<p class="para-agileits-w3layouts">Lahore, Pakistan</p>
+				<h6>
+					<p style="color: white;"><strong>WhatsApp:</strong> +92 343 4535019</p>
+					<p style="color: white;" ><strong>Malaysia:</strong> +60 199550994</p>
+				</h6>
+				<p class="para-agileits-w3layouts"><strong>Resident: </strong> Lahore, Pakistan</p>
+				<p class="para-agileits-w3layouts"><strong>Current: </strong> Kuala Lumpur, Malaysia</p>
 			</div>
 			<div class="botttom-nav-agileits">
 				<div class="w3l-social">
@@ -20,6 +24,7 @@
 						<li><a href="https://www.linkedin.com/in/touqeer-ahmad/" alt="linkedin touqeer ahmad tqr" target="_blank" class="fa fa-linkedin"></a></li>
 						<li><a href="https://www.facebook.com/tqr093" alt="facebook touqeer ahmad tqr" target="_blank" class="fa fa-facebook"></a></li>
 						<li><a href="https://github.com/Touqeer-tqr" alt="github touqeer-tqr" target="_blank" class="fa fa-github"></a></li>
+						<li><a href="https://rubygems.org/profiles/touqeer-tqr" alt="rubygems touqeer-tqr" target="_blank" class="fa fa-rubygems"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -29,7 +34,11 @@
 	</div>
 	<div class="wthree-form">
 		<div class="container">
-			<div class="col-md-6 contact-form agile_inner_grids">
+			<div class="col-md-12 map-w3-agileits">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d509921.18737165374!2d101.46708849879778!3d3.1580434401764568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc49c701efeae7%3A0xf4d98e5b2f1c287d!2sKuala%20Lumpur%2C%20Federal%20Territory%20of%20Kuala%20Lumpur!5e0!3m2!1sen!2smy!4v1600013663723!5m2!1sen!2smy" class="col-md-6 col-xs-12" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d435521.26222624135!2d74.07127853383082!3d31.482666530572754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190483e58107d9%3A0xc23abe6ccc7e2462!2sLahore!5e0!3m2!1sen!2s!4v1514046979569" class="col-md-6 col-xs-12" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 contact-form agile_inner_grids hidden">
 				<h5 class="title-w3">Say Hello</h5>
 				<%= form_tag(portfolios_contact_me_path, method: "post", remote: true) do %>
 					<div class="fields-grid">
@@ -49,9 +58,6 @@
 					</div>
 					<input type="submit" value="Send">
 				<% end %>
-			</div>
-			<div class="col-md-6 map-w3-agileits">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d435521.26222624135!2d74.07127853383082!3d31.482666530572754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190483e58107d9%3A0xc23abe6ccc7e2462!2sLahore!5e0!3m2!1sen!2s!4v1514046979569" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
